testdata/failing/union-rem-not-last.trunnel
struct rem_not_last {
    u8 tag;
    union addr[tag] {
       4 : u8 rem[]; u8 bad;
    };
}
